# zwm

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon  config.kdl  config.zig  flake.nix  meson.build  test-waybar-config.json
.config/90deg/: config.json
.zig-cache/o/04bdfd193f278cbeb86d2a3d0ed487e6/: zwm
.zig-cache/o/09d58a657041f419092ac746bf6d08fa/: zwm
.zig-cache/o/0ddfa33143243bd3d99269982183369d/: zwm
.zig-cache/o/12f626ffaa8c9d99384dbeea3d8e75e1/: zwm
.zig-cache/o/1557b008d3016275ed19aa9c0619aef6/: zwm
.zig-cache/o/1a96a03d92eb2ffd014f9e5d9bb1acb0/: zwm
.zig-cache/o/1c20405309b11609b3845fc58192df66/: zwm
.zig-cache/o/1ff6bf8e27b2a77b02bb963f6acb0b8f/: zwm
.zig-cache/o/2647b0934304e90c6e084b4ef53737c6/: zwm
.zig-cache/o/265ac7ccb376ce245ed0b22597a71c56/: zwm
.zig-cache/o/2e473e47a3958ec94cfa919af29da868/: wayland.zig
.zig-cache/o/2e63b1dd07c54abdd1174a4d4e6672bf/: zwm
.zig-cache/o/320066db1cb3d06bbbbc14a8dbed9b97/: cimport.zig
.zig-cache/o/3d81c9e09cc7f86cbdcc0a773b39e756/: zwm
.zig-cache/o/4bfa1617e80d6e4dfae072a2cafa481c/: zwm
.zig-cache/o/4e8a04c5fecdfa11ad588fbe0aac3d1d/: cimport.zig
.zig-cache/o/4e9b5798bdef2982f647e73b34c86d21/: zwm
.zig-cache/o/5f20d17fd3202541c07375875375319c/: wayland.zig
.zig-cache/o/5fc0e1f735db66f65dd41c6fb8c4b478/: zwm
.zig-cache/o/61b0ea7cec294bef97669bcaccacf787/: wayland.zig
.zig-cache/o/650b92bb92925658ac1cbb268760419e/: zwm
.zig-cache/o/6aca6cfc71885d09d046fb8671bb687e/: cimport.h  cimport.h.d
.zig-cache/o/72fa8408638314e0fc53bea73b7e300b/: zwm
.zig-cache/o/77c147ddb11908927dadae5d12a9a993/: wayland.zig
.zig-cache/o/7de65450b061d15d1466154192ff4f27/: zwm
.zig-cache/o/9cf88d3e7ae046dccb743d29f68b4a18/: dependencies.zig
.zig-cache/o/a691bf226f62200884e1dfbcdd05e8ae/: zwm
include/wlr/: config.h  version.h
src/: config.zig  config_parser.zig  zwm.zig
src.bak/zwm/: config_parser.zig  main.zig
src.bak/zwm/core/: server.zig
src.bak/zwmctl/: main.zig
src/animation/: animation.zig
src/core/: server.zig
src/structs/: keyboard.zig  layer.zig  layer_surface.zig  output.zig  popup.zig  toplevel.zig
src/zwm/: config_parser.zig  main.zig  simple_kdl.zig
src/zwm.backup/: config_parser.zig  main.zig
(+35 files in other folders)
